modify installation instructions

--- a/_posts/r/2015-07-30-getting-started.Rmd
+++ b/_posts/r/2015-07-30-getting-started.Rmd
@@ -16,7 +16,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 # Plotly for R
 
-Plotly is R package for creating interactive web-based graphs via [plotly](https://plot.ly/)'s JavaScript graphing library, `plotly.js`.
+Plotly is R package for creating interactive web-based graphs via [plotly.js](http://plot.ly/javascript).
 
 <a href="https://travis-ci.org/ropensci/plotly">
     <img alt="Build Status" style="margin: 0;" src="https://travis-ci.org/ropensci/plotly.png?branch=master">
@@ -24,14 +24,18 @@ Plotly is R package for creating interactive web-based graphs via [plotly](https
 
 #### Installation
 
-__plotly__ is not (yet) available on CRAN, but you can install it via [devtools](http://cran.r-project.org/web/packages/devtools/):
+__plotly__ is now available on CRAN!
 
 ```r
-install.packages("viridis") # dependency
-install.packages("devtools")
-devtools::install_github("ropensci/plotly")
+install.packages("plotly")
 ```
 
+You can also install the latest development version ([on GitHub](https://github.com/ropensci/plotly)) via [devtools](http://cran.r-project.org/web/packages/devtools/):
+
+```r
+# install.packages("devtools")
+devtools::install_github("ropensci/plotly")
+```
 
 #### Signup
 
@@ -57,7 +61,7 @@ Save these commands in your [.Rprofile](http://www.statmethods.net/interface/cus
 
 #### Special Instructions for Plotly On-Premise Users
 
-Your API key for account on the public cloud will be different than the API key in [Plotly On-Premise](https://plot.ly/product/enterprise/). Visit https://plotly.your-company.com/settings/api/ to find your Plotly On-Premise API key. Remember to replace "your-company.com" with the URL of your Plotly On-Premise server.
+Your API key for account on the public cloud will be different than the API key in [Plotly On-Premise](https://plot.ly/product/enterprise/). Visit <https://plotly.your-company.com/settings/api/> to find your Plotly On-Premise API key. Remember to replace "your-company.com" with the URL of your Plotly On-Premise server.
 
 If your company has a Plotly On-Premise server, change the R API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.
 
