update R splash page with new 2.0 info

--- a/_posts/2015-07-30-r-index.Rmd
+++ b/_posts/2015-07-30-r-index.Rmd
@@ -1,3 +1,48 @@
+###############################################################################
+
+
+
+
+
+
+
+
+This page is out of sync with `r-index.md` until https://github.com/plotly/documentation/pull/213#issuecomment-157031089
+gets resolved.
+
+For now, edit your content on the 2015-07-30-r-index.md.
+
+
+
+
+
+
+
+###############################################################################
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ---
 title: R Graphing Library | Plotly
 permalink: r/
@@ -6,7 +51,7 @@ layout: langindex
 language: r
 ---
 
-<h1 class="centered">Plotly R Library 1.0</h1>
+<h1 class="centered">Plotly R Library 2.0</h1>
 <div class="row centered btnrow">
 	<a href="/r/getting-started/" class="button no_underline">Getting Started</a>
 	<a href="/r/user-guide/" class="button no_underline">User Guide</a>
@@ -14,6 +59,9 @@ language: r
   <a href="https://plot.ly/r/shiny-tutorial/" class="button no_underline">Shiny</a>
 </div>
 
+<div>Plotly for R is an interactive, browser-based charting library built on the open source javascript graphing library,
+<a href="https://plot.ly/javascript" target="_blank">plotly.js</a>.
+</div>
 
 ```{r, echo = FALSE, message=FALSE}
 knitr::opts_chunk$set(message = FALSE)
