privacy updates for R

--- a/_posts/r/2015-07-30-privacy.Rmd
+++ b/_posts/r/2015-07-30-privacy.Rmd
@@ -13,7 +13,10 @@ display_as: file_settings
 
 # Privacy Settings in R
 
-Plotly graphs are created in your online plotly account. By default, plotly graphs are public.
+Since Version 2.0 (November 15, 2015), Plotly for R renders graphs locally.
+You can publish these graphs to the web with the command `plotly_POST`.
+
+By default, plotly graphs are public.
 You can make them private by setting the `world_readable` argument to `FALSE`.
 
 
@@ -26,8 +29,12 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```{r, message=FALSE}
 library(plotly)
 
-# public
 p <- plot_ly(x = c(0, 2, 4), y = c(0, 4, 2))
+
+# rendered locally
+p
+
+# public
 plotly_POST(p, filename="r-docs/public-graph")
 
 # private
