--- a/_posts/r/2015-07-30-privacy.md
+++ b/_posts/r/2015-07-30-privacy.md
@@ -13,38 +13,34 @@ display_as: file_settings
 
 # Privacy Settings in R
 
-Plotly graphs are created in your online plotly account. By default, plotly graphs are public.
+Since Version 2.0 (November 15, 2015), Plotly for R renders graphs locally.
+You can publish these graphs to the web with the command `plotly_POST`.
+
+By default, plotly graphs are public.
 You can make them private by setting the `world_readable` argument to `FALSE`.
-
-
-
 
 
 ```r
 library(plotly)
 
+p <- plot_ly(x = c(0, 2, 4), y = c(0, 4, 2))
+
+# render locally
+p
+```
+
+```r
 # public
-plot_ly(x = c(0, 2, 4), y = c(0, 4, 2), filename="r-docs/public-graph")
+plotly_POST(p, filename="r-docs/public-graph")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/519.embed" width="800" frameBorder="0"></iframe>
 
 ```r
 # private
-plot_ly(x = c(0, 2, 4), y = c(0, 4, 2), world_readable = FALSE, filename="r-docs/private-graph")
+plotly_POST(p, world_readable = FALSE, filename="r-docs/private-graph")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/521.embed" width="800" frameBorder="0"></iframe>
 
-```r
-# another option is to "build" the plot, then tack on these properties
-p <- plot_ly(x = c(0, 2, 4), y = c(0, 4, 2))
-p <- plotly_build(p)
-p$filename <- "r-docs/private-graph"
-p$world_readable <- FALSE
-p
-```
-
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/521.embed" width="800" frameBorder="0"></iframe>
-
-Creating public graphs on Plotly is free. To create more than one private graphs, [sign up for a Plotly subscription](https://plot.ly/products/cloud/).
+Creating public graphs on Plotly is free. To create more than one private graph, [sign up for a Plotly subscription](https://plot.ly/products/cloud/).
