update meta description of embedding

--- a/_posts/r/2015-07-30-embedding-in-html.Rmd
+++ b/_posts/r/2015-07-30-embedding-in-html.Rmd
@@ -2,7 +2,7 @@
 title: Embed Graphs in HTML
 name: Embed Graphs in HTML
 permalink: r/embedding-plotly-graphs-in-HTML
-description: How to embed Plotly graphs in HTML pages with Plotly's R API
+description: How to embed plotly graphs in HTML pages with plotly for R
 layout: base
 thumbnail: text-and-annotations.png
 language: r
@@ -28,7 +28,7 @@ class(p)
 p
 ```
 
-You can also post your figure to a plotly server with `plotly_POST()`. This function returns an object of class figure. When you print a figure object in an rmarkdown/knitr document, it embeds the figure as an iframe (pointing to your figure).
+You can also host your figures on a plotly server by calling `plotly_POST()`. This function returns an object of class figure. When you print a figure object in an rmarkdown/knitr document, it embeds the figure as an iframe which is served from your plotly account.
 
 ```{r}
 f <- plotly_POST(p, filename = "r-docs/midwest-boxplots")
