update filename meta description

--- a/_posts/r/2015-07-30-filenames.Rmd
+++ b/_posts/r/2015-07-30-filenames.Rmd
@@ -2,7 +2,7 @@
 title: R Filenames, Folders, and Updating Plotly Graphs in R | Examples | Plotly
 name: Filenames, Folders, and Updating Plotly Graphs in R
 permalink: r/file-options/
-description: How to update your graphs in R with the fileopt parameter.
+description: How to save R graphs to the plotly cloud
 layout: base
 language: r
 page_type: example_index
