remove filename from all the R examples

--- a/_posts/r/2015-07-30-3d-line-plots.Rmd
+++ b/_posts/r/2015-07-30-3d-line-plots.Rmd
@@ -33,7 +33,7 @@ df <- setNames(
 )
 
 library(plotly)
-plot_ly(df, x = x, y = y, z = z, color = time, type = "scatter3d", filename="r-docs/3d-line-plot")
+plot_ly(df, x = x, y = y, z = z, color = time, type = "scatter3d")
 
 
 ```
