--- a/_posts/r/2015-07-30-3d-surface-plots.Rmd
+++ b/_posts/r/2015-07-30-3d-surface-plots.Rmd
@@ -24,7 +24,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 library(plotly)
 # volcano is a numeric matrix that ships with R
-plot_ly(z = volcano, type = "surface", filename="r-docs/surface")
+plot_ly(z = volcano, type = "surface")
 
 ```
 
