--- a/_posts/r/2015-07-30-bar-charts.Rmd
+++ b/_posts/r/2015-07-30-bar-charts.Rmd
@@ -41,8 +41,7 @@ p2 <- add_trace(
 )
 p2
 
-layout(p2, barmode = "stack",
-       filename="r-docs/stacked-bars")
+layout(p2, barmode = "stack")
 
 ## customizing colors
 
