--- a/_posts/r/2015-07-30-box-plots.Rmd
+++ b/_posts/r/2015-07-30-box-plots.Rmd
@@ -24,7 +24,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 library(plotly)
 ### basic boxplot
-plot_ly(y = rnorm(50), type = "box", filename="r-docs/basic-box") %>%
+plot_ly(y = rnorm(50), type = "box") %>%
   add_trace(y = rnorm(50, 1))
 ### adding jittered points
 plot_ly(y = rnorm(50), type = "box", boxpoints = "all", jitter = 0.3,
