--- a/_posts/r/2015-07-30-box-plots.md
+++ b/_posts/r/2015-07-30-box-plots.md
@@ -19,7 +19,7 @@ order: 4
 ```r
 library(plotly)
 ### basic boxplot
-plot_ly(y = rnorm(50), type = "box", filename="r-docs/basic-box") %>%
+plot_ly(y = rnorm(50), type = "box") %>%
   add_trace(y = rnorm(50, 1))
 ```
 
