--- a/_posts/r/2015-07-30-bubble-charts.Rmd
+++ b/_posts/r/2015-07-30-bubble-charts.Rmd
@@ -24,7 +24,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 library(plotly)
 d <- diamonds[sample(nrow(diamonds), 1000), ]
 # note how size is automatically scaled and added as hover text
-plot_ly(d, x = carat, y = price, size = carat, mode = "markers", filename="r-docs/basic-bubble")
+plot_ly(d, x = carat, y = price, size = carat, mode = "markers")
 
 plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
         mode = "markers", color = carat, size = carat, opacity = carat,
