--- a/_posts/r/2015-07-30-bubble-maps.Rmd
+++ b/_posts/r/2015-07-30-bubble-maps.Rmd
@@ -41,7 +41,6 @@ g <- list(
 
 plot_ly(df, lon = lon, lat = lat, text = hover,
         marker = list(size = sqrt(pop/10000) + 1),
-        color = q, type = 'scattergeo', locationmode = 'USA-states',
-        filename="r-docs/bubble-map") %>%
+        color = q, type = 'scattergeo', locationmode = 'USA-states') %>%
   layout(title = '2014 US city populations<br>(Click legend to toggle)', geo = g)
 ```
