--- a/_posts/r/2015-07-30-choropleth.Rmd
+++ b/_posts/r/2015-07-30-choropleth.Rmd
@@ -36,8 +36,7 @@ g <- list(
 
 plot_ly(df, z = total.exports, text = hover, locations = code, type = 'choropleth',
         locationmode = 'USA-states', color = total.exports, colors = 'Purples',
-        marker = list(line = l), colorbar = list(title = "Millions USD"),
-        filename="r-docs/usa-choropleth") %>%
+        marker = list(line = l), colorbar = list(title = "Millions USD")) %>%
   layout(title = '2011 US Agriculture Exports by State<br>(Hover for breakdown)', geo = g)
 ```
 
