--- a/_posts/r/2015-07-30-contour-plots.Rmd
+++ b/_posts/r/2015-07-30-contour-plots.Rmd
@@ -23,7 +23,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 ### Basic contour
 library(plotly)
-plot_ly(z = volcano, type = "contour", filename="r-docs/basic-contour")
+plot_ly(z = volcano, type = "contour")
 ```
 
 ### 2D Density Contour Plot
