--- a/_posts/r/2015-07-30-filled-area-plots.Rmd
+++ b/_posts/r/2015-07-30-filled-area-plots.Rmd
@@ -23,7 +23,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 
 library(plotly)
-p <- plot_ly(x = c(1, 2, 3, 4), y = c(0, 2, 3, 5), fill = "tozeroy", filename="r-docs/area-plot")
+p <- plot_ly(x = c(1, 2, 3, 4), y = c(0, 2, 3, 5), fill = "tozeroy")
 add_trace(p, x = c(1, 2, 3, 4), y = c(3, 5, 1, 7), fill = "tonexty")
 
 
