--- a/_posts/r/2015-07-30-graphing-multiple-chart-types.Rmd
+++ b/_posts/r/2015-07-30-graphing-multiple-chart-types.Rmd
@@ -27,8 +27,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 library(plotly)
 mtcars <- mtcars[order(mtcars$disp), ]
 p <- plot_ly(mtcars, x = disp, y = mpg, mode = "markers",
-             text = rownames(mtcars), showlegend = FALSE,
-             filename="r-docs/scatter-loess-smoother")
+             text = rownames(mtcars), showlegend = FALSE)
 add_trace(p, y = fitted(loess(mpg ~ disp)), mode = "lines",
           name = "loess smoother", showlegend = TRUE)
 
