--- a/_posts/r/2015-07-30-heatmaps.Rmd
+++ b/_posts/r/2015-07-30-heatmaps.Rmd
@@ -21,7 +21,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 ```{r, message=FALSE}
 library(plotly)
-plot_ly(z = volcano, type = "heatmap", filename="r-docs/basic-heatmap")
+plot_ly(z = volcano, type = "heatmap")
 ```
 
 ### Categorical Axes
