--- a/_posts/r/2015-07-30-line-and-scatter.Rmd
+++ b/_posts/r/2015-07-30-line-and-scatter.Rmd
@@ -22,8 +22,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```{r, message=FALSE}
 # Simple scatterplot
 library(plotly)
-plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, mode = "markers",
-        filename="r-docs/simple-scatter")
+plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, mode = "markers")
 ```
 
 ### Scatter Plot with Qualitative Colorscale
