--- a/_posts/r/2015-07-30-line-plot-maps.Rmd
+++ b/_posts/r/2015-07-30-line-plot-maps.Rmd
@@ -39,7 +39,7 @@ geo <- list(
 
 plot_ly(air, lon = long, lat = lat, text = airport, type = 'scattergeo',
         locationmode = 'USA-states', marker = list(size = 2, color = 'red'),
-        inherit = FALSE, filename="r-docs/usa-flight-paths") %>%
+        inherit = FALSE) %>%
   add_trace(lon = list(start_lon, end_lon), lat = list(start_lat, end_lat),
             group = id, opacity = cnt/max(cnt), data = flights,
             mode = 'lines', line = list(width = 1, color = 'red'),
