--- a/_posts/r/2015-07-30-polar-chart.Rmd
+++ b/_posts/r/2015-07-30-polar-chart.Rmd
@@ -22,7 +22,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 ```{r, message=FALSE}
 library(plotly)
-p <- plot_ly(plotly::mic, r = r, t = t, color = nms, mode = "lines", filename="r-docs/polar-line-chart")
+p <- plot_ly(plotly::mic, r = r, t = t, color = nms, mode = "lines")
 layout(p, title = "Mic Patterns", orientation = -90)
 ```
 
