--- a/_posts/r/2015-07-30-scatter-plot-maps.Rmd
+++ b/_posts/r/2015-07-30-scatter-plot-maps.Rmd
@@ -43,7 +43,7 @@ g <- list(
 
 plot_ly(df, lat = lat, lon = long, text = hover, color = cnt,
         type = 'scattergeo', locationmode = 'USA-states', mode = 'markers',
-        marker = m, filename="r-docs/us-airports") %>%
+        marker = m) %>%
   layout(title = 'Most trafficked US airports<br>(Hover for airport)', geo = g)
 ```
 
