--- a/_posts/r/2015-07-30-subplots.Rmd
+++ b/_posts/r/2015-07-30-subplots.Rmd
@@ -184,8 +184,7 @@ df$id <- as.integer(factor(df$YEAR))
 
 p <- plot_ly(df, type = 'scattergeo', lon = LON, lat = LAT, group = YEAR,
              geo = paste0("geo", id),
-             showlegend = F, marker = list(color = toRGB("blue"), opacity = 0.5),
-             filename="r-docs/map-subplots") %>%
+             showlegend = F, marker = list(color = toRGB("blue"), opacity = 0.5)) %>%
   add_trace(lon = -78, lat = 47, mode = 'text', group = YEAR,
             geo = paste0("geo", id),
             text = YEAR, data = df2) %>%
