--- a/_posts/r/2015-07-30-text-and-annotations.Rmd
+++ b/_posts/r/2015-07-30-text-and-annotations.Rmd
@@ -22,7 +22,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ### Text Mode
 ```{r, message=FALSE}
 library(plotly)
-plot_ly(mtcars, x = wt, y = mpg, text = rownames(mtcars), mode = "text", filename="r-docs/text-mode")
+plot_ly(mtcars, x = wt, y = mpg, text = rownames(mtcars), mode = "text")
 ```
 
 ### Hover Text
