--- a/_posts/r/2015-07-30-time-series.Rmd
+++ b/_posts/r/2015-07-30-time-series.Rmd
@@ -25,8 +25,7 @@ now_lt <- as.POSIXlt(Sys.time(), tz = "GMT")
 tm <- seq(0, 600, by = 10)
 x <- now_lt - tm
 y <- rnorm(length(x))
-plot_ly(x = x, y = y, text = paste(tm, "seconds from now in GMT"),
-        filename="r-docs/time-series-gmt")
+plot_ly(x = x, y = y, text = paste(tm, "seconds from now in GMT"))
 
 # POSIXct date time class without timezone
 now_ct <- as.POSIXct(Sys.time())
