--- a/_posts/r/2015-07-30-2D-Histogram.Rmd
+++ b/_posts/r/2015-07-30-2D-Histogram.Rmd
@@ -25,7 +25,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 library(plotly)
 s <- matrix(c(1, -.75, -.75, 1), ncol = 2)
 obs <- mvtnorm::rmvnorm(500, sigma = s)
-plot_ly(x = obs[,1], y = obs[,2], type = "histogram2d", filename="r-docs/2d-histogram")
+plot_ly(x = obs[,1], y = obs[,2], type = "histogram2d")
 
 
 ```
