--- a/_posts/r/2015-07-30-3d-scatter-plots.Rmd
+++ b/_posts/r/2015-07-30-3d-scatter-plots.Rmd
@@ -32,7 +32,7 @@ obs <- mvtnorm::rmvnorm(200, sigma = s)
 df <- setNames(data.frame(obs), c("x", "y", "z"))
 
 library(plotly)
-plot_ly(df, x = x, y = y, z = z, type = "scatter3d", mode = "markers", filename="r-docs/3d-scatter")
+plot_ly(df, x = x, y = y, z = z, type = "scatter3d", mode = "markers")
 ```
 
 ## 3D Scatter Plot with Hover Text
