--- a/_posts/r/2015-07-30-axes.Rmd
+++ b/_posts/r/2015-07-30-axes.Rmd
@@ -33,8 +33,7 @@ a <- list(
 )
 s <- seq(1, 4, by = 0.25)
 plot_ly(x = s, y = s) %>%
-  layout(xaxis = a, yaxis = a,
-  filename="r-docs/style-properties")
+  layout(xaxis = a, yaxis = a)
 ```
 
 ### Style Axes Title and Ticks Labels
