--- a/_posts/r/2015-07-30-axes.md
+++ b/_posts/r/2015-07-30-axes.md
@@ -30,8 +30,7 @@ a <- list(
 )
 s <- seq(1, 4, by = 0.25)
 plot_ly(x = s, y = s) %>%
-  layout(xaxis = a, yaxis = a,
-  filename="r-docs/style-properties")
+  layout(xaxis = a, yaxis = a)
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/523.embed" width="800" frameBorder="0"></iframe>
