--- a/_posts/r/2015-07-30-heatmaps.md
+++ b/_posts/r/2015-07-30-heatmaps.md
@@ -18,7 +18,7 @@ order: 7
 
 ```r
 library(plotly)
-plot_ly(z = volcano, type = "heatmap", filename="r-docs/basic-heatmap")
+plot_ly(z = volcano, type = "heatmap")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/241.embed" width="800" frameBorder="0"></iframe>
