--- a/_posts/r/2015-07-30-histograms.Rmd
+++ b/_posts/r/2015-07-30-histograms.Rmd
@@ -24,7 +24,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```{r, message=FALSE}
 ### Basic histogram
 library(plotly)
-plot_ly(x = rnorm(50), type = "histogram", filename="r-docs/basic-histogram")
+plot_ly(x = rnorm(50), type = "histogram")
 
 ### Overlaid histograms
 plot_ly(x = rnorm(500), opacity = 0.6, type = "histogram") %>%
