--- a/_posts/r/2015-07-30-insets.Rmd
+++ b/_posts/r/2015-07-30-insets.Rmd
@@ -21,7 +21,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 ```{r, message=FALSE}
 library(plotly)
-p1 <- plot_ly(x = c(1, 2, 3), y = c(4, 3, 2), filename="r-docs/insets")
+p1 <- plot_ly(x = c(1, 2, 3), y = c(4, 3, 2))
 p2 <- plot_ly(x = c(20, 30, 40), y = c(30, 40, 50)) %>%
   layout(xaxis = list(domain = c(0.6, 0.95)),
          yaxis = list(domain = c(0.6, 0.95)))
