--- a/_posts/r/2015-07-30-insets.md
+++ b/_posts/r/2015-07-30-insets.md
@@ -18,7 +18,7 @@ order: 2
 
 ```r
 library(plotly)
-p1 <- plot_ly(x = c(1, 2, 3), y = c(4, 3, 2), filename="r-docs/insets")
+p1 <- plot_ly(x = c(1, 2, 3), y = c(4, 3, 2))
 p2 <- plot_ly(x = c(20, 30, 40), y = c(30, 40, 50)) %>%
   layout(xaxis = list(domain = c(0.6, 0.95)),
          yaxis = list(domain = c(0.6, 0.95)))
