remove more filenames from the R docs

--- a/_posts/ggplot2/user-guide/2015-08-10-user-guide_ggplot2_index.Rmd
+++ b/_posts/ggplot2/user-guide/2015-08-10-user-guide_ggplot2_index.Rmd
@@ -31,7 +31,7 @@ library(plotly)
 dsamp <- diamonds[sample(nrow(diamonds), 1000), ]
 gg <- qplot(carat, price, data=dsamp, colour=clarity)
 
-ggplotly(gg, filename="ggplot2-user-guide/example-1")
+ggplotly(gg)
 ```
 
 `plotly::ggplotly` returns a `plotly` object. When you print it in your console, the plotly object will be sent to your plotly account and opened in your web-browser (e.g. [https://plot.ly/~RPlotBot/1778](https://plot.ly/~RPlotBot/1778)). [In knitr](https://plot.ly/r/knitr), the chart is embedded as an iframe. [In Shiny](https://plot.ly/r/shiny-tutorial), the chart JSON is served to the client and graphed client-side with [postMessage](https://github.com/plotly/postMessage-API) or [plotly.js](https://plot.ly/javascript).
@@ -47,7 +47,7 @@ In this case, use `plotly_build`. Consider this simple ggplot2 figure:
 ```{r}
 df <- data.frame(x=c(1, 2, 3, 4), y=c(1, 5, 3, 5), group=c('A', 'A', 'B', 'B'))
 g <- ggplot(data=df, aes(x=x, y=y, colour=group)) + geom_point()
-ggplotly(g, filename="ggplot2-user-guide/example-2")
+ggplotly(g)
 ```
 
 Here is the ggplot2 figure described as a plotly object
