--- a/_posts/r/2015-07-30-3d-surface-plots.Rmd
+++ b/_posts/r/2015-07-30-3d-surface-plots.Rmd
@@ -32,5 +32,5 @@ plot_ly(z = volcano, type = "surface")
 
 ```{r, message=FALSE, height=850}
 kd <- with(MASS::geyser, MASS::kde2d(duration, waiting, n = 50))
-with(kd, plot_ly(x = x, y = y, z = z, type = "surface", filename="r-docs/2d-density-surface"))
+with(kd, plot_ly(x = x, y = y, z = z, type = "surface"))
 ```
