--- a/_posts/r/2015-07-30-LaTeX.Rmd
+++ b/_posts/r/2015-07-30-LaTeX.Rmd
@@ -21,8 +21,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 library(plotly)
 plot_ly(x = c(1, 2, 3, 4), y = c(1, 4, 9, 16),
-        name = "$\\alpha_{1c} = 352 \\pm 11 \\text{ km s}^{-1}$",
-        filename = "r-docs/latex") %>%
+        name = "$\\alpha_{1c} = 352 \\pm 11 \\text{ km s}^{-1}$") %>%
   add_trace(x = c(1, 2, 3, 4), y = c(0.5, 2, 4.5, 8),
             name = "$\\beta_{1c} = 25 \\pm 11 \\text{ km s}^{-1}$") %>%
   layout(xaxis = list(title = "$\\sqrt{(n_\\text{c}(t|{T_\\text{early}}))}$"),
