--- a/_posts/r/2015-07-30-axes.md
+++ b/_posts/r/2015-07-30-axes.md
@@ -62,8 +62,7 @@ a <- list(
 s <- seq(0, 8)
 plot_ly(x = s, y = s) %>%
   add_trace(y = rev(s)) %>%
-  layout(xaxis = a, yaxis = a, showlegend = FALSE,
-  filename="r-docs/style-axes-title")
+  layout(xaxis = a, yaxis = a, showlegend = FALSE)
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/525.embed" width="800" frameBorder="0"></iframe>
@@ -85,8 +84,7 @@ ax <- list(
 )
 s <- seq(-1, 4)
 plot_ly(x = s, y = s) %>%
-  layout(xaxis = ax, yaxis = ax,
-  filename="r-docs/style-zero-line")
+  layout(xaxis = ax, yaxis = ax)
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/527.embed" width="800" frameBorder="0"></iframe>
@@ -103,7 +101,7 @@ ax <- list(
   showgrid = FALSE
 )
 
-plot_ly(x = c(1, 2), y = c(1, 2), filename="r-docs/hide-axes") %>%
+plot_ly(x = c(1, 2), y = c(1, 2)) %>%
   layout(xaxis = ax, yaxis = ax)
 ```
 
@@ -113,7 +111,7 @@ plot_ly(x = c(1, 2), y = c(1, 2), filename="r-docs/hide-axes") %>%
 
 ```r
 library(plotly)
-plot_ly(x = c(1, 2), y = c(1, 2), filename="r-docs/reversed-axes") %>%
+plot_ly(x = c(1, 2), y = c(1, 2)) %>%
   layout(xaxis = list(autorange = "reversed"))
 ```
 
@@ -124,7 +122,7 @@ plot_ly(x = c(1, 2), y = c(1, 2), filename="r-docs/reversed-axes") %>%
 ```r
 library(plotly)
 s <- seq(1, 8)
-plot_ly(x = s, y = exp(s), name = "exponential", filename="r-docs/log-axes") %>%
+plot_ly(x = s, y = exp(s), name = "exponential") %>%
   add_trace(y =  s, name = "linear") %>%
   layout(yaxis = list(type = "log"))
 ```
@@ -135,7 +133,7 @@ plot_ly(x = s, y = exp(s), name = "exponential", filename="r-docs/log-axes") %>%
 
 ```r
 library(plotly)
-plot_ly(x = seq(2, 6, by = 2), y = seq(-3, 3, by = 3), filename="r-docs/rangemode") %>%
+plot_ly(x = seq(2, 6, by = 2), y = seq(-3, 3, by = 3)) %>%
   layout(
     xaxis = list(rangemode = "tozero"),
     yaxis = list(rangemode = "nonnegative"))
@@ -148,7 +146,7 @@ plot_ly(x = seq(2, 6, by = 2), y = seq(-3, 3, by = 3), filename="r-docs/rangemod
 ```r
 library(plotly)
 s <- seq(1, 8)
-plot_ly(x = s, y = s, filename="r-docs/manual-range") %>%
+plot_ly(x = s, y = s) %>%
   add_trace(y = rev(s)) %>%
   layout(
     xaxis = list(range = c(2, 5)),
