--- a/_posts/r/2015-07-30-bar-charts.Rmd
+++ b/_posts/r/2015-07-30-bar-charts.Rmd
@@ -47,13 +47,12 @@ layout(p2, barmode = "stack")
 
 library(dplyr)
 ggplot2::diamonds %>% count(cut) %>%
-  plot_ly(x = cut, y = n, type = "bar", marker = list(color = toRGB("black")),
-          filename="r-docs/bar-custom-colors")
+  plot_ly(x = cut, y = n, type = "bar", marker = list(color = toRGB("black")))
 
 # mapping a color variable
 
 ggplot2::diamonds %>% count(cut, clarity) %>%
-  plot_ly(x = cut, y = n, type = "bar", color = clarity, filename="r-docs/bar-color-map")
+  plot_ly(x = cut, y = n, type = "bar", color = clarity)
 
 
 ```
