--- a/_posts/r/2015-07-30-box-plots.Rmd
+++ b/_posts/r/2015-07-30-box-plots.Rmd
@@ -28,12 +28,12 @@ plot_ly(y = rnorm(50), type = "box") %>%
   add_trace(y = rnorm(50, 1))
 ### adding jittered points
 plot_ly(y = rnorm(50), type = "box", boxpoints = "all", jitter = 0.3,
-        pointpos = -1.8, filename="r-docs/jittered-box")
+        pointpos = -1.8)
 ### several box plots
-plot_ly(ggplot2::diamonds, y = price, color = cut, type = "box", filename="r-docs/multiple-boxes")
+plot_ly(ggplot2::diamonds, y = price, color = cut, type = "box")
 
 ### grouped box plots
-plot_ly(ggplot2::diamonds, x = cut, y = price, color = clarity, type = "box", filename="r-docs/grouped-boxes") %>%
+plot_ly(ggplot2::diamonds, x = cut, y = price, color = clarity, type = "box") %>%
   layout(boxmode = "group")
 
 
