--- a/_posts/r/2015-07-30-bubble-charts.Rmd
+++ b/_posts/r/2015-07-30-bubble-charts.Rmd
@@ -27,7 +27,6 @@ d <- diamonds[sample(nrow(diamonds), 1000), ]
 plot_ly(d, x = carat, y = price, size = carat, mode = "markers")
 
 plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
-        mode = "markers", color = carat, size = carat, opacity = carat,
-        filename="r-docs/custom-bubble-text")
+        mode = "markers", color = carat, size = carat, opacity = carat)
 
 ```
