--- a/_posts/r/2015-07-30-embedding-in-html.Rmd
+++ b/_posts/r/2015-07-30-embedding-in-html.Rmd
@@ -31,7 +31,7 @@ p
 You can also host your figures on a plotly server by calling `plotly_POST()`. This function returns an object of class figure. When you print a figure object in an rmarkdown/knitr document, it embeds the figure as an iframe which is served from your plotly account.
 
 ```{r}
-f <- plotly_POST(p, filename = "r-docs/midwest-boxplots")
+f <- plotly_POST(p)
 class(f)
 f
 ```
