--- a/_posts/r/2015-07-30-graphing-multiple-chart-types.Rmd
+++ b/_posts/r/2015-07-30-graphing-multiple-chart-types.Rmd
@@ -45,8 +45,7 @@ p %>%
   add_trace(p, data = f, y = fit + 1.96 * se.fit, mode = "lines",
             fill = "tonexty", line = l) %>%
   add_trace(p, data = f, y = fit - 1.96 * se.fit, mode = "lines",
-            fill = "tonexty", line = l,
-            filename="r-docs/scatter-uncertaincy-estimates")
+            fill = "tonexty", line = l)
 
 
 ```
