--- a/_posts/r/2015-07-30-heatmaps.md
+++ b/_posts/r/2015-07-30-heatmaps.md
@@ -29,7 +29,7 @@ plot_ly(z = volcano, type = "heatmap")
 m <- matrix(rnorm(9), nrow = 3, ncol = 3)
 plot_ly(z = m,
 	x = c("a", "b", "c"), y = c("d", "e", "f"),
-	type = "heatmap", filename = "r-docs/categorical-heatmap")
+	type = "heatmap")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/243.embed" width="800" frameBorder="0"></iframe>
@@ -37,7 +37,7 @@ plot_ly(z = m,
 ### Sequential Colorscales: Hot
 
 ```r
-plot_ly(z = volcano, colorscale = "Hot", type = "heatmap", filename="r-docs/heatmap-hot")
+plot_ly(z = volcano, colorscale = "Hot", type = "heatmap")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/245.embed" width="800" frameBorder="0"></iframe>
@@ -45,7 +45,7 @@ plot_ly(z = volcano, colorscale = "Hot", type = "heatmap", filename="r-docs/heat
 ### Sequential Colorscales: Greys
 
 ```r
-plot_ly(z = volcano, colorscale = "Greys", type = "heatmap", filename="r-docs/heatmap-greys")
+plot_ly(z = volcano, colorscale = "Greys", type = "heatmap")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/247.embed" width="800" frameBorder="0"></iframe>
@@ -53,7 +53,7 @@ plot_ly(z = volcano, colorscale = "Greys", type = "heatmap", filename="r-docs/he
 ### Sequential Colorscale: Greens
 
 ```r
-plot_ly(z = volcano, colorscale = "Greens", type = "heatmap", filename="r-docs/heatmap-greens")
+plot_ly(z = volcano, colorscale = "Greens", type = "heatmap")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/249.embed" width="800" frameBorder="0"></iframe>
@@ -65,7 +65,7 @@ vals <- unique(scales::rescale(c(volcano)))
 o <- order(vals, decreasing = FALSE)
 cols <- scales::col_numeric("Blues", domain = NULL)(vals)
 colz <- setNames(data.frame(vals[o], cols[o]), NULL)
-plot_ly(z = volcano, colorscale = colz, type = "heatmap", filename="r-docs/heatmap-custom")
+plot_ly(z = volcano, colorscale = colz, type = "heatmap")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/251.embed" width="800" frameBorder="0"></iframe>
@@ -73,7 +73,7 @@ plot_ly(z = volcano, colorscale = colz, type = "heatmap", filename="r-docs/heatm
 
 ```r
 library(viridis)
-plot_ly(z = volcano, colors = viridis(256), type = "heatmap", filename="r-docs/heatmap-viridis")
+plot_ly(z = volcano, colors = viridis(256), type = "heatmap")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/253.embed" width="800" frameBorder="0"></iframe>
