--- a/_posts/r/2015-07-30-histograms.Rmd
+++ b/_posts/r/2015-07-30-histograms.Rmd
@@ -28,6 +28,6 @@ plot_ly(x = rnorm(50), type = "histogram")
 
 ### Overlaid histograms
 plot_ly(x = rnorm(500), opacity = 0.6, type = "histogram") %>%
-  add_trace(x = rnorm(500)+1, filename="overlaid-histogram") %>%
+  add_trace(x = rnorm(500)+1) %>%
   layout(barmode="overlay")
 ```
