--- a/_posts/r/2015-07-30-line-plot-maps.Rmd
+++ b/_posts/r/2015-07-30-line-plot-maps.Rmd
@@ -53,8 +53,7 @@ plot_ly(air, lon = long, lat = lat, text = airport, type = 'scattergeo',
 ```{r, message=FALSE}
 library(plotly)
 plot_ly(lat = c(40.7127, 51.5072), lon = c(-74.0059, 0.1275), type = 'scattergeo',
-        mode = 'lines', line = list(width = 2, color = 'blue'),
-        filename="r-docs/great-circle") %>%
+        mode = 'lines', line = list(width = 2, color = 'blue')) %>%
   layout(
     title = 'London to NYC Great Circle',
     showlegend = FALSE,
@@ -96,8 +95,7 @@ d <- df %>%
   spread(l, value)
 
 p <- plot_ly(type = 'scattergeo', mode = 'lines',
-             line = list(width = 2, color = 'violet'),
-             filename="r-docs/contour-lines-globe")
+             line = list(width = 2, color = 'violet'))
 
 for (i in unique(d$line))
   p <- add_trace(p, lat = lat, lon = lon, data = subset(d, line == i))
