--- a/_posts/r/2015-07-30-scatter-plot-maps.Rmd
+++ b/_posts/r/2015-07-30-scatter-plot-maps.Rmd
@@ -89,6 +89,6 @@ g <- list(
 )
 
 plot_ly(df, lat = Lat, lon = Lon, text = hover, color = Globvalue,
-        type = 'scattergeo', marker = m, filename="r-docs/precipitation-map") %>%
+        type = 'scattergeo', marker = m) %>%
   layout(title = 'US Precipitation 06-30-2015<br>Source: NOAA', geo = g)
 ```
