--- a/_posts/r/2015-07-30-text-and-annotations.Rmd
+++ b/_posts/r/2015-07-30-text-and-annotations.Rmd
@@ -28,7 +28,7 @@ plot_ly(mtcars, x = wt, y = mpg, text = rownames(mtcars), mode = "text")
 ### Hover Text
 ```{r, message=FALSE}
 library(plotly)
-plot_ly(mtcars, x = wt, y = mpg, text = rownames(mtcars), mode="markers", filename="r-docs/hover-text")
+plot_ly(mtcars, x = wt, y = mpg, text = rownames(mtcars), mode="markers")
 ```
 
 ### Styling Text
@@ -39,7 +39,7 @@ t <- list(
     color = toRGB("grey50")
 )
 plot_ly(mtcars, x = wt, y = mpg, text = rownames(mtcars), mode = "markers+text",
-        textfont = t, textposition = "top middle", filename="r-docs/style-text")
+        textfont = t, textposition = "top middle")
 ```
 
 ### Single Annotation
@@ -58,7 +58,7 @@ a <- list(
   ay = -40
 )
 
-plot_ly(mtcars, x = wt, y = mpg, mode = "markers", filename="r-docs/annotation") %>%
+plot_ly(mtcars, x = wt, y = mpg, mode = "markers") %>%
   layout(annotations = a)
 ```
 
