--- a/_posts/r/2015-07-30-time-series.Rmd
+++ b/_posts/r/2015-07-30-time-series.Rmd
@@ -32,14 +32,12 @@ now_ct <- as.POSIXct(Sys.time())
 tm <- seq(0, 600, by = 10)
 x <- now_ct - tm
 y <- rnorm(length(x))
-plot_ly(x = x, y = y, text = paste(tm, "seconds from now in", Sys.timezone()),
-        filename="r-docs/time-series")
+plot_ly(x = x, y = y, text = paste(tm, "seconds from now in", Sys.timezone()))
 
 # Dates
 today <- Sys.Date()
 tm <- seq(0, 600, by = 10)
 x <- today - tm
 y <- rnorm(length(x))
-plot_ly(x = x, y = y, text = paste(tm, "days from today"),
-        filename="r-docs/time-series-sysdate")
+plot_ly(x = x, y = y, text = paste(tm, "days from today"))
 ```
