--- a/_posts/r/2015-07-30-3d-scatter-plots.Rmd
+++ b/_posts/r/2015-07-30-3d-scatter-plots.Rmd
@@ -41,5 +41,5 @@ plot_ly(df, x = x, y = y, z = z, type = "scatter3d", mode = "markers")
 set.seed(100)
 d <- diamonds[sample(nrow(diamonds), 1000), ]
 plot_ly(d, x = carat, y = price, z=depth, text = paste("Clarity: ", clarity),
-        type="scatter3d", mode="markers", filename="r-docs/3d-scatter-with-hover-text")
+        type="scatter3d", mode="markers")
 ```
