--- a/_posts/r/2015-07-30-contour-plots.Rmd
+++ b/_posts/r/2015-07-30-contour-plots.Rmd
@@ -33,7 +33,7 @@ x <- rnorm(200)
 y <- rnorm(200)
 p1 <- plot_ly(x = x, type = "histogram")
 p2 <- plot_ly(x = x, y = y, type = "histogram2dcontour")
-p3 <- plot_ly(y = y, type = "histogram", filename="r-docs/subplots")
+p3 <- plot_ly(y = y, type = "histogram")
 a1 <- list(domain = c(0, .85))
 a2 <- list(domain = c(.85, 1))
 subplot(
