--- a/_posts/r/2015-07-30-line-and-scatter.Rmd
+++ b/_posts/r/2015-07-30-line-and-scatter.Rmd
@@ -28,8 +28,7 @@ plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, mode = "markers")
 ### Scatter Plot with Qualitative Colorscale
 ```{r, message=FALSE}
 plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, mode = "markers",
-        color = Species,
-        filename="r-docs/scatter-with-qualitative-colorscale")
+        color = Species)
 ```
 
 ### ColorBrewer Palette Names
@@ -37,8 +36,7 @@ plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, mode = "markers",
 # By default, colors will 'span the gamut'
 # scales::show_col(RColorBrewer::brewer.pal("Set1"))
 plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, mode = "markers",
-        color = Species, colors = "Set1",
-        filename="r-docs/scatter-colorbrewer")
+        color = Species, colors = "Set1")
 ```
 
 ### Custom Color Scales
@@ -46,8 +44,7 @@ plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, mode = "markers",
 # pass RGB or hex color codes directly to colors for finer control
 pal <- RColorBrewer::brewer.pal(nlevels(iris$Species), "Set1")
 plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, color = Species,
-        colors = pal, mode = "markers",
-        filename="r-docs/scatter-custom-color-scale")
+        colors = pal, mode = "markers")
 ```
 
 ### Adding Color and Size Mapping
@@ -55,18 +52,17 @@ plot_ly(data = iris, x = Sepal.Length, y = Petal.Length, color = Species,
 library(plotly)
 d <- diamonds[sample(nrow(diamonds), 1000), ]
 # note how size is automatically scaled and added as hover text
-plot_ly(d, x = carat, y = price, size = carat, mode = "markers", filename="r-docs/basic-bubble")
+plot_ly(d, x = carat, y = price, size = carat, mode = "markers")
 
 plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
-        mode = "markers", color = carat, size = carat, opacity = carat,
-        filename="r-docs/custom-bubble-text")
+        mode = "markers", color = carat, size = carat, opacity = carat)
 
 ```
 
 ### Basic Time Series Plot with Loess Smooth
 ```{r, message=FALSE}
-p <- plot_ly(economics, x = date, y = uempmed, name = "unemployment", filename="r-docs/basic-time-series")
-p %>% add_trace(y = fitted(loess(uempmed ~ as.numeric(date))), filename="r-docs/time-series-with-fit")
+p <- plot_ly(economics, x = date, y = uempmed, name = "unemployment")
+p %>% add_trace(y = fitted(loess(uempmed ~ as.numeric(date))))
 ```
 
 ### Density Plot
@@ -77,14 +73,14 @@ df <- data.frame(
   y = unlist(lapply(dens, "[[", "y")),
   cut = rep(names(dens), each = length(dens[[1]]$x))
 )
-plot_ly(df, x = x, y = y, color = cut, filename="r-docs/density-plot")
+plot_ly(df, x = x, y = y, color = cut)
 ```
 
 ### Line Interpolation Options
 ```{r, message=FALSE}
 x <- 1:5
 y <- c(1, 3, 2, 3, 1)
-plot_ly(x = x, y = y, name = "linear", line = list(shape = "linear"), filename="r-docs/line-shape-options") %>%
+plot_ly(x = x, y = y, name = "linear", line = list(shape = "linear")) %>%
   add_trace(y = y + 5, name = "spline", line = list(shape = "spline")) %>%
   add_trace(y = y + 10, name = "vhv", line = list(shape = "vhv")) %>%
   add_trace(y = y + 15, name = "hvh", line = list(shape = "hvh")) %>%
