--- a/_posts/2015-07-30-r-index.md
+++ b/_posts/2015-07-30-r-index.md
@@ -10,7 +10,7 @@ language: r
 
 <div>Plotly for R is an interactive, browser-based charting library built on the open source JavaScript graphing library,
 <a href="https://plot.ly/javascript" target="_blank">plotly.js</a>.
-It works entirely locally, through the <a href="" target="_blank">HTML widgets</a> framework.
+It works entirely locally, through the <a href="http://www.htmlwidgets.org/" target="_blank">HTML widgets</a> framework.
 </div>
 
 <div class="row centered btnrow">
