update matlab index and typo in matlab offline

--- a/_posts/user_guide_matlab/Plotly Offline.ipynb
+++ b/_posts/user_guide_matlab/Plotly Offline.ipynb
@@ -33,7 +33,7 @@
       "**NEW: Plotly's MATLAB library v.2.2.0 now includes support for Plotly Offline.**\n",
       "- Instead of saving the converted MATLAB figures to a server, your data and graphs will be saved as *html* files to your current working directory using Plotly Offline. These *html* files will contain all of the necessary dependencies to render the plot within a browser.\n",
       "\n",
-      "- When your ready to share, you can just publish them to the [Plotly Cloud](https://plot.ly/feed]) or to your company's internal [Plotly Enterprise](https://plot.ly/product/enterprise) via the save icon in the modebar.\n",
+      "- When you're ready to share, you can just publish them to the [Plotly Cloud](https://plot.ly/feed]) or to your company's internal [Plotly Enterprise](https://plot.ly/product/enterprise) via the save icon in the modebar.\n",
       "\n",
       "![self-hosted matlab online](http://i.imgur.com/FxPBBgD.png)\n",
       "\n",
@@ -219,8 +219,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+        "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
