plotly offline img edits

--- a/_posts/user_guide_matlab/Plotly Offline.ipynb
+++ b/_posts/user_guide_matlab/Plotly Offline.ipynb
@@ -203,8 +203,7 @@
       "% open it in your web browser\n",
       "web html_file -browser\n",
       "```\n",
-      "\n",
-      "![self-hosted matlab online](http://i.imgur.com/3ECfrwG.png)"
+      "<img src=\"http://i.imgur.com/HeUJ7fw.png\" width=\"100%\" height=\"300px\" alt=\"self-hosted matlab online\">"
      ]
     },
     {
