r user guide typo

--- a/_posts/r/2015-07-30-user-guide.Rmd
+++ b/_posts/r/2015-07-30-user-guide.Rmd
@@ -18,7 +18,7 @@ Sys.setenv("plotly_username"="RPlotBot")
 Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 
-Plotly is R package for creating interactive web-based graphs via the open source JavaScript graphing library [plotly.js](http://plot.ly/javascript). As of version 2.0 (November 17, 2015), Plotly graphs are rendered *locally* through the [htmlwidgets](http://www.htmlwidgets.org/) framework.
+Plotly is an R package for creating interactive web-based graphs via the open source JavaScript graphing library [plotly.js](http://plot.ly/javascript). As of version 2.0 (November 17, 2015), Plotly graphs are rendered *locally* through the [htmlwidgets](http://www.htmlwidgets.org/) framework.
 
 To create a plotly visualization, start with `plot_ly()`. Your graph will appear in your web browser or in RStudio's viewer.
 
