matlab user guide edits

--- a/_posts/user_guide_matlab/matlab-user-guide.ipynb
+++ b/_posts/user_guide_matlab/matlab-user-guide.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:39f5ca400287099948c44d6af854f823c9d77b9c40d1ad88c921860ea4692638"
+  "signature": "sha256:de151447f2e7c44ddc0911ce2c0dd2cdc78e101595da176dc46af282091163f5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -181,12 +181,27 @@
       "xlabel('X');\n",
       "ylabel('Noisy');\n",
       "\n",
-      "resp = fig2plotly(fig,'filename','matlab_overview_1','strip',false); % <---- ONE LINE OF PLOTLY CODE! \n",
+      "%%Just ONE line of Plotly Code!%%\n",
+      "resp = fig2plotly(fig,'filename','matlab_overview_1','strip',false); \n",
       "resp.url"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "`ans = https://plot.ly/~matlab_user_guide/661/noisy-vs-x/`"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<iframe frameborder=\"0\" seamless=\"seamless\" scrolling=\"no\" src=\"https://plot.ly/~matlab_user_guide/661.embed\"> </iframe>"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -200,18 +215,29 @@
      "metadata": {},
      "source": [
       "###Offline Example\n",
-      "Using the same example from above we can make a Plotly graph in Matlab offline and open in a browser"
+      "We can make a Plotly graph in Matlab offline which will be saved as an html file to your current working directory using Plotly Offline. These html files will contain all of the necessary dependencies to render the plot within a browser."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fig2plotly(fig,'offline',true,'filename','matlab_overview_1_offline','strip',false);"
+      "X = linspace(0,2*pi,50)';\n",
+      "Y = [cos(X), 0.5*sin(X)];\n",
+      "stem(X,Y)\n",
+      "\n",
+      "fig2plotly(gcf,'offline',true,'filename','offline-graph');"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"http://i.imgur.com/HeUJ7fw.png\" width=\"80%\" height=\"250px\" alt=\"self-hosted matlab online\">"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -234,7 +260,7 @@
      "collapsed": false,
      "input": [
       "[INPUT]:\n",
-      "plotlyfigure = getplotlyfig(file_owner,file_id)\n",
+      "plotlyfigure = getplotlyfig('file_owner',file_id)\n",
       "\n",
       "[WHERE]:\n",
       "file_owner - user name associated with the plot [string].\n",
@@ -252,7 +278,7 @@
      "metadata": {},
      "source": [
       "####Example\n",
-      "Here we can use `getplotlyfig.m` and have a go at changing the bar and line colours from our previous example!"
+      "Here we can use `getplotlyfig.m` and have a go at changing the bar and line colours on a different graph: https://plot.ly/~matlab_user_guide/664/ !"
      ]
     },
     {
@@ -326,6 +352,13 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<iframe frameborder=\"0\" seamless=\"seamless\" scrolling=\"no\" src=\"https://plot.ly/~matlab_user_guide/665/cases-vs-years.embed\"> </iframe>"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -472,7 +505,7 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
