--- a/_posts/user_guide_matlab/Plotly Offline.ipynb
+++ b/_posts/user_guide_matlab/Plotly Offline.ipynb
@@ -118,34 +118,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      ">> sphere; \n",
-      ">> plotly_fig = fig2plotly(gcf, 'offline', true, 'filename', 'sphere');"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "html": [
-        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~matlab_user_guide/6265.embed\" height=\"525\" width=\"100%\"></iframe>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "<plotly.tools.PlotlyDisplay object>"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "[X,Y,Z] = peaks(25);\n",
-      "figure\n",
-      "surf(X,Y,Z);\n",
-      "plotly_fig = fig2plotly(gcf, 'offline', true, 'filename', 'peaks');"
+      ">> [X,Y,Z] = peaks(25);\n",
+      ">> figure\n",
+      ">> surf(X,Y,Z);\n",
+      ">> plotly_fig = fig2plotly(gcf, 'offline', true, 'filename', 'peaks');"
      ],
      "language": "python",
      "metadata": {},
@@ -165,14 +141,40 @@
      "prompt_number": 4
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      ">> X = linspace(0,2*pi,50)';\n",
+      ">> Y = [cos(X), 0.5*sin(X)];\n",
+      ">> stem(X,Y)\n",
+      "\n",
+      ">> fig2plotly(gcf,'offline',true,'filename','offline-graph');\n",
+      "file:///Users/Chelsea/Documents/MATLAB/offline-graph.html"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"http://i.imgur.com/HeUJ7fw.png\" width=\"80%\" height=\"250px\" alt=\"self-hosted matlab online\">"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "## Creating offline figures with Plotly's native syntax\n",
       "\n",
-      "Describing figure's using Plotly's native syntax is a more cumbersome but powerful and flexible way to create Plotly figures. View more examples at the bottom of each example page on [plotly's online MATLAB documentation](https://plot.ly/matlab).\n",
-      "\n",
-      "```MATLAB\n",
+      "Describing figure's using Plotly's native syntax is a more cumbersome but powerful and flexible way to create Plotly figures. View more examples at the bottom of each example page on [plotly's online MATLAB documentation](https://plot.ly/matlab)."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "%% Describe your figure: data and layout. \n",
       "% view more examples at the bottom of each example page: https://plot.ly/matlab\n",
       "\n",
@@ -201,10 +203,11 @@
       "html_file = plotlyoffline(p);\n",
       "\n",
       "% open it in your web browser\n",
-      "web html_file -browser\n",
-      "```\n",
-      "<img src=\"http://i.imgur.com/HeUJ7fw.png\" width=\"100%\" height=\"300px\" alt=\"self-hosted matlab online\">"
-     ]
+      "web html_file -browser\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
