matlab userguide plot edits

--- a/_posts/user_guide_matlab/Plotly Offline.ipynb
+++ b/_posts/user_guide_matlab/Plotly Offline.ipynb
@@ -193,7 +193,7 @@
       "layout.width = 800; % required\n",
       "layout.height = 650; % required\n",
       "\n",
-      "p = plotlyfigure; % initalize an empty figure object\n",
+      "p = plotlyfig; % initalize an empty figure object\n",
       "p.data = data;\n",
       "p.layout = layout;\n",
       "\n",
@@ -202,12 +202,35 @@
       "% Create a standalone HTML file\n",
       "html_file = plotlyoffline(p);\n",
       "\n",
-      "% open it in your web browser\n",
-      "web html_file -browser\n"
+      "html_file"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "`html_file = file:///Users/Chelsea/Documents/MATLAB/basic-offline.html`"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "web file:///Users/Chelsea/Documents/MATLAB/basic-offline.html -browser"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"http://i.imgur.com/Thmg2nf.png\" width=\"80%\" height=\"250px\" alt=\"self-hosted matlab online\">"
+     ]
     },
     {
      "cell_type": "code",
