--- a/_posts/user_guide_matlab/matlab-user-guide.ipynb
+++ b/_posts/user_guide_matlab/matlab-user-guide.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:de151447f2e7c44ddc0911ce2c0dd2cdc78e101595da176dc46af282091163f5"
+  "signature": "sha256:9f211b5930286adffc48eb35b0d564a702ae08f1527a2bf03d5e03a339eebfa3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -200,7 +200,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<iframe frameborder=\"0\" seamless=\"seamless\" scrolling=\"no\" src=\"https://plot.ly/~matlab_user_guide/661.embed\"> </iframe>"
+      "<iframe frameborder=\"0\" seamless=\"seamless\" scrolling=\"no\" src=\"https://plot.ly/~matlab_user_guide/661.embed\" width=\"80%\" height=\"500px\"> </iframe>"
      ]
     },
     {
@@ -357,7 +357,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<iframe frameborder=\"0\" seamless=\"seamless\" scrolling=\"no\" src=\"https://plot.ly/~matlab_user_guide/665/cases-vs-years.embed\"> </iframe>"
+      "<iframe frameborder=\"0\" seamless=\"seamless\" scrolling=\"no\" src=\"https://plot.ly/~matlab_user_guide/665/cases-vs-years.embed\" width=\"80%\" height=\"500px\"> </iframe>"
      ]
     },
     {
@@ -505,7 +505,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
